Remove unused profiles. Add guide to create custom JRE for faster startup